# learnopengl-breakout

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cc
core/: CMakeLists.txt  game.cc  game.h  resource_manager.cc  resource_manager.h  shader.cc  shader.h  sprite_renderer.cc  sprite_renderer.h  texture.cc  texture.h
core/shaders/: CMakeLists.txt  sprite.fs  sprite.vs
core/textures/: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: CMakeLists.txt
